# tgtg

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/bot/: __init__.py  routers.py
app/bot/handlers/: common.py  photos.py
app/services/style_transfer/: __init__.py  base.py  external.py  mock.py  service.py
