[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ussr-style-telegram-bot"
version = "0.1.0"
description = "Telegram bot skeleton for USSR-style image generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.13.1",
  "aiohttp>=3.10.10",
  "pydantic-settings>=2.5.2",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
